2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Add rulers for Ayca and the Petrides lab. These are toggled
	using the F10 key.

2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/three_d.c, etc.: Simple autorotation feature tied to F12 key for now

2016-01-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/slice_events.c, callbacks/colour_coding.c, main/three_d.c: Increase
	consistency between behaviors of the vertex and volume colour bars. Also added
	some documentation and fixed some bugs.

2016-01-07  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c, input_files/poly_formats.c: Support output of
	.x3d, .ply, and Wavefront .obj format surfaces.

2015-12-15  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Fully implement vertex data, including colour coding support
	and multicolumn text data files.

2015-11-10  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c, slice_window/colour_coding.c,	Include/global_variables.h:
	Update the way we implement the initial colour range options.
   * Documentation/Display.tex, Documentation/globals.tex: Document
	these changes.

2015-11-06  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c: Save/load oblique slice settings.

2015-10-08  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/colour_coding.c: Slight tweak to the initial colour
	range to better handle BigBrain images.

2015-09-25  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c, input_files/vertex_data.c, main/graphics.c,
	main/three_d.c, menu/input_menu.c, menu/Display.menu.include:
	Support the loading and display of per-vertex (e.g. cortical
	thickness) data for surface polygon objects.

2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/undo.c, etc.: Implement N-level undo during
	painting.

2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>